Changelog V4.00 Initial: first build based on CM10.2. Feature: Ganbarou wallpaper Feature: Ganbarou bootanimation Feature: Ganbarou About screen (Ganbarou changelog, Ganbarou version, Ganbarou easter egg) Feature: Reboot and Recovery on top level of power menu
Change-Id: I5165ce46da5f38628fee078b1f02acdde5fce924

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1104,6 +1104,7 @@
             android:windowSoftInputMode="stateVisible|adjustResize"/>
 
         <!-- Anonymous Statistics -->
+<!-- **** GANBAROU_PATCH_START ****
         <receiver android:name=".cmstats.ReportingServiceManager"
             android:enabled="true"
             android:exported="false"
@@ -1119,6 +1120,7 @@
             android:exported="false"
             android:name=".cmstats.ReportingService">
         </service>
+**** GANBAROU_PATCH_END **** -->
 
         <!-- Runs in the phone process since it needs access to the Phone object -->
         <activity android:name=".deviceinfo.Status"
