--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1875,5 +1875,12 @@
             </intent-filter>
         </receiver>
 
+        <!-- Lto Service -->
+        <service android:label="LtoService"
+            android:enabled="true"
+            android:exported="false"
+            android:name=".cyanogenmod.LtoService">
+        </service>
+
     </application>
 </manifest>
